--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 streamlit>=1.40.0
-tensorflow>=2.19.0
-numpy>=2.0.0
-pillow>=11.0.0
-pandas>=2.2.0 
+tensorflow>=2.16.0,<2.18.0
+numpy>=1.24.0,<2.0.0
+pillow>=10.0.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+plotly>=5.0.0
+scikit-learn>=1.3.0 
