--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit>=1.40.0
-tflite-runtime>=2.14.0
+tensorflow>=2.14.0,<3.0.0
 numpy>=1.24.0,<2.0.0
 pillow>=10.0.0
 pandas>=2.0.0
 matplotlib>=3.7.0
 plotly>=5.0.0
-scikit-learn>=1.3.0 
+scikit-learn>=1.3.0
