--- a/.slugignore
+++ b/.slugignore
@@ -1,24 +1,22 @@
 *.pyc
 __pycache__/
-.DS_Store
 .git/
 .gitignore
-.vscode/
-.idea/
+.DS_Store
 *.log
-*.tmp
 .pytest_cache/
 .coverage
 .env
-.env.local
-.env.*.local
+.venv/
+venv/
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-*.swp
-*.swo
-*~
-notebook.ipynb
+*.egg-info/
+build/
+dist/
+.jupyter/
+.ipynb_checkpoints/
 README.md
-run_app.py 
+notebook.ipynb
+run_app.py
+saved_model/
+tfjs_model/ 
