--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ plotly>=5.0.0,<6.0.0
 scikit-learn>=1.3.0,<2.0.0
 
 # Optional ML dependencies (will be detected and used if available)
-# Compatible with Python 3.9+ (using regular tensorflow instead of tensorflow-cpu)
-tensorflow>=2.12.0,<2.14.0
-# tflite-runtime>=2.12.0,<2.14.0
+# These are commented out to ensure deployment works without them
+# tensorflow>=2.15.0,<3.0.0
+# tflite-runtime>=2.15.0,<3.0.0
 
 # Production optimization
 altair>=5.0.0,<6.0.0
