--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,7 @@ plotly>=5.0.0,<6.0.0
 scikit-learn>=1.3.0,<2.0.0
 
 # ML dependencies for AI model inference
-tensorflow-cpu>=2.15.0,<2.16.0
-# tflite-runtime>=2.15.0,<3.0.0  # Alternative lightweight option
+tensorflow>=2.15.0,<2.16.0
 
 # Production optimization
 altair>=5.0.0,<6.0.0
