--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ matplotlib>=3.7.0,<4.0.0
 plotly>=5.0.0,<6.0.0
 scikit-learn>=1.3.0,<2.0.0
 
-# ML dependencies for AI model inference
-tensorflow>=2.15.0,<2.16.0
+# Optional ML dependencies (will be detected and used if available)
+# These are commented out to ensure deployment works without them
+# tensorflow>=2.15.0,<3.0.0
+# tflite-runtime>=2.15.0,<3.0.0
 
 # Production optimization
 altair>=5.0.0,<6.0.0
