--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ plotly>=5.0.0,<6.0.0
 scikit-learn>=1.3.0,<2.0.0
 altair>=5.0.0,<6.0.0
 watchdog>=3.0.0,<4.0.0
-tensorflow==2.15.0
+
+# TensorFlow for Python < 3.13 only (fallback to demo mode for Python 3.13+)
+tensorflow>=2.13.0,<2.16.0; python_version < "3.13"
