Force Python 3.10 deployment with multiple strategies
- Updated runtime.txt to python-3.10.*
- Added .python-version file (3.10.12) for pyenv compatibility
- Created pyproject.toml with requires-python specification
- Updated .streamlit/config.toml with Python version preferences
- Modified Dockerfile to use python:3.10.12-slim
- Restored full TensorFlow requirements for Python 3.10

This comprehensive approach should force Streamlit Cloud to use Python 3.10
and enable real AI model functionality instead of demo mode.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -36,4 +36,9 @@ messageFormat = "%(asctime)s %(message)s"
 [global]
 developmentMode = false
 logLevel = "info"
-unitTest = false 
+unitTest = false
+
+# Python runtime specification
+[python]
+version = "3.10"
+preferredVersion = "3.10.12" 
