--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "classifit"
 version = "2.0.0"
 description = "AI-powered image classification using deep learning"
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10"
 dependencies = [
     "streamlit>=1.40.0,<2.0.0",
     "numpy>=1.24.0,<2.0.0",
@@ -17,7 +17,6 @@ dependencies = [
     "scikit-learn>=1.3.0,<2.0.0",
     "altair>=5.0.0,<6.0.0",
     "watchdog>=3.0.0,<4.0.0",
-    "tensorflow>=2.13.0,<2.16.0",
 ]
 
 [tool.streamlit]
